--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1087,6 +1087,43 @@
         "subtitle": "تحتوي هذه الصفحة على معلومات حول الطلب. يمكن الاطلاع على الحالة والبيانات المكتملة وأي أسئلة إضافية هنا.",
         "modal": {
             "title": "سؤال إضافي"
+        },
+        "cards": {
+            "back": "رجوع",
+            "connection_error": {
+                "contacts": "للأسئلة، اتصل على {{name}}.",
+                "description": "تظهر لك هذه الرسالة بسبب وجود خطأ فني. يمكنك المحاولة مرة أخرى في وقت لاحق.",
+                "heading": "فشل الطلب",
+                "title": "عطل فني"
+            },
+            "not_filled_required_criteria": {
+                "contacts": "للأسئلة، اتصل على {{name}}.",
+                "description": "تتلقى هذه الرسالة لأن بعض التفاصيل الخاصة بك لم يتم العثور عليها في النظام الخارجي. ونتيجة لذلك، لا يمكن تقييم طلبك بشكل كامل.",
+                "heading": "فشل الطلب",
+                "title": "البيانات المفقودة"
+            },
+            "not_found": {
+                "contacts": "للأسئلة، اتصل على {{name}}.",
+                "description": "تظهر لك هذه الرسالة لأن بياناتك لم يتم العثور عليها في النظام الخارجي.",
+                "heading": "فشل الطلب",
+                "title": "لم يتم العثور على بياناتك"
+            },
+            "taken_by_partner": {
+                "contacts": "للأسئلة، اتصل على {{name}}.",
+                "description": "ستصلك هذه الرسالة لأن الرصيد تم تفعيله من قبل أحد أفراد العائلة أو ولي الأمر <br />. <br /><br /> يتوفر الرصيد في حساب الشخص الذي قام <br /> بتفعيله أولاً.",
+                "heading": "فشل الطلب",
+                "title": "تم تفعيل هذا الرصيد بالفعل"
+            }
+        },
+        "options": {
+            "no": "لا يوجد"
+        },
+        "prefills": {
+            "child": "الطفل",
+            "children": "الأطفال",
+            "partner": "تفاصيل شريكك",
+            "subtitle": "إذا كانت معلوماتك غير صحيحة، يمكنك النقر على الزر الموجود في الأسفل.",
+            "title": "تحقق من صحة البيانات."
         }
     },
     "fund_requests": {
