--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -664,6 +664,43 @@
         "subtitle": "Эта страница содержит информацию о заявке. Здесь можно просмотреть статус, заполненные данные и дополнительные вопросы.",
         "modal": {
             "title": "Дополнительный вопрос"
+        },
+        "cards": {
+            "back": "Назад",
+            "connection_error": {
+                "contacts": "По вопросам обращайтесь по адресу {{name}}.",
+                "description": "Вы получили это сообщение из-за технической ошибки. Вы можете повторить попытку позже.",
+                "heading": "Запрос не прошел",
+                "title": "Технический сбой"
+            },
+            "not_filled_required_criteria": {
+                "contacts": "По вопросам обращайтесь по адресу {{name}}.",
+                "description": "Вы получили это сообщение, потому что некоторые ваши данные не были найдены во внешней системе. В результате ваше заявление не может быть полностью рассмотрено.",
+                "heading": "Запрос не прошел",
+                "title": "Отсутствующие данные"
+            },
+            "not_found": {
+                "contacts": "По вопросам обращайтесь по адресу {{name}}.",
+                "description": "Вы получаете это сообщение, потому что ваши данные не были найдены во внешней системе.",
+                "heading": "Запрос не прошел",
+                "title": "Ваши данные не найдены"
+            },
+            "taken_by_partner": {
+                "contacts": "По вопросам обращайтесь по адресу {{name}}.",
+                "description": "Вы получаете это сообщение, потому что кредит был активирован членом семьи или опекуном <br />. <br /><br /> Кредит доступен на счете того, кто <br /> активировал его первым.",
+                "heading": "Запрос не прошел",
+                "title": "Этот кредит уже активирован"
+            }
+        },
+        "options": {
+            "no": "Нет"
+        },
+        "prefills": {
+            "child": "Ребенок",
+            "children": "Дети",
+            "partner": "Подробная информация о вашем партнере",
+            "subtitle": "Если ваша информация неверна, вы можете нажать кнопку внизу.",
+            "title": "Проверьте правильность данных."
         }
     },
     "fund_requests": {
