--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -664,6 +664,43 @@
         "subtitle": "Ця сторінка містить інформацію про заявку. Статус, заповнені дані та будь-які додаткові питання можна переглянути тут.",
         "modal": {
             "title": "Додаткове запитання"
+        },
+        "cards": {
+            "back": "Назад",
+            "connection_error": {
+                "contacts": "З питаннями звертайтеся за адресою: {{name}}.",
+                "description": "Ви отримали це повідомлення через технічну помилку. Ви можете спробувати пізніше.",
+                "heading": "Запит не вдалося виконати",
+                "title": "Технічна несправність"
+            },
+            "not_filled_required_criteria": {
+                "contacts": "З питаннями звертайтеся за адресою: {{name}}.",
+                "description": "Ви отримали це повідомлення, тому що деякі з ваших даних не були знайдені в зовнішній системі. Внаслідок цього ваша заявка не може бути оцінена в повному обсязі.",
+                "heading": "Запит не вдалося виконати",
+                "title": "Відсутні дані"
+            },
+            "not_found": {
+                "contacts": "З питаннями звертайтеся за адресою: {{name}}.",
+                "description": "Ви отримуєте це повідомлення, тому що ваші дані не були знайдені в зовнішній системі.",
+                "heading": "Запит не вдалося виконати",
+                "title": "Ваші дані не знайдено"
+            },
+            "taken_by_partner": {
+                "contacts": "З питаннями звертайтеся за адресою: {{name}}.",
+                "description": "Ви отримали це повідомлення, тому що кредит був активований <br /> членом сім'ї або опікуном. <br /><br /> Кредит доступний в акаунті особи, яка <br /> активувала його першою.",
+                "heading": "Запит не вдалося виконати",
+                "title": "Цей кредит вже активовано"
+            }
+        },
+        "options": {
+            "no": "Ні."
+        },
+        "prefills": {
+            "child": "Дитинко.",
+            "children": "Діти",
+            "partner": "Інформація про вашого партнера",
+            "subtitle": "Якщо ваша інформація невірна, ви можете натиснути кнопку внизу.",
+            "title": "Перевірте правильність даних."
         }
     },
     "fund_requests": {
