--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1041,14 +1041,14 @@
                 "make_a_choice": "اختر واحدة"
             },
             "fund_request_step_done": {
-                "application_processing": "تم استلام طلبك. ستتم معالجة الطلب في غضون 10 أيام عمل. ستتلقى رسالة بريد إلكتروني بهذا الشأن.",
                 "application_received": "تم استلام الطلب",
                 "back": "رجوع",
                 "error_occurred": "حدث خطأ أثناء التقديم.",
                 "leave_form": "استمارة الإجازة",
                 "reason": "السبب:",
                 "sent": "تم الإرسال",
-                "sign_up": "التسجيل"
+                "sign_up": "التسجيل",
+                "application_processing": "تم استلام طلبك. ستتم معالجة الطلب في غضون 8 أسابيع كحد أقصى. ستتلقى رسالة بريد إلكتروني بهذا الشأن."
             },
             "fund_request_physical_card_request": {
                 "description": "سنقوم بإرسال بطاقتك الفعلية إلى العنوان الذي قدمته بمجرد أن تصبح جاهزة للاستخدام.",
@@ -1122,8 +1122,20 @@
             "child": "الطفل",
             "children": "الأطفال",
             "partner": "تفاصيل شريكك",
-            "subtitle": "إذا كانت معلوماتك غير صحيحة، يمكنك النقر على الزر الموجود في الأسفل.",
-            "title": "تحقق من صحة البيانات."
+            "children_list": {
+                "kind_1": "الطفل 1",
+                "kind_10": "الطفل 10",
+                "kind_2": "الطفل 2",
+                "kind_3": "الطفل 3",
+                "kind_4": "الطفل 4",
+                "kind_5": "الطفل 5",
+                "kind_6": "الطفل 6",
+                "kind_7": "الطفل 7",
+                "kind_8": "الطفل 8",
+                "kind_9": "الطفل 9"
+            },
+            "subtitle": "هل التفاصيل غير صحيحة؟ إذا كان الأمر كذلك، يرجى الاتصال بالبلدية.",
+            "title": "تم ملء التفاصيل أدناه بالفعل"
         }
     },
     "fund_requests": {
