--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -618,14 +618,14 @@
                 "make_a_choice": "Выберите один"
             },
             "fund_request_step_done": {
-                "application_processing": "Ваша заявка получена. Заявка будет обработана в течение 10 рабочих дней. Об этом вы получите сообщение по электронной почте.",
                 "application_received": "Заявка получена",
                 "back": "Назад",
                 "error_occurred": "Во время применения произошла ошибка.",
                 "leave_form": "Форма отпуска",
                 "reason": "Причина:",
                 "sent": "Отправлено!",
-                "sign_up": "Зарегистрироваться"
+                "sign_up": "Зарегистрироваться",
+                "application_processing": "Ваше заявление получено. Заявка будет рассмотрена в течение максимум 8 недель. Об этом вы получите сообщение по электронной почте."
             },
             "fund_request_physical_card_request": {
                 "description": "Мы отправим вашу физическую карту по указанному вами адресу, как только она будет готова к использованию.",
@@ -699,8 +699,20 @@
             "child": "Ребенок",
             "children": "Дети",
             "partner": "Подробная информация о вашем партнере",
-            "subtitle": "Если ваша информация неверна, вы можете нажать кнопку внизу.",
-            "title": "Проверьте правильность данных."
+            "children_list": {
+                "kind_1": "Ребенок 1",
+                "kind_10": "Ребенок 10",
+                "kind_2": "Ребенок 2",
+                "kind_3": "Ребенок 3",
+                "kind_4": "Ребенок 4",
+                "kind_5": "Ребенок 5",
+                "kind_6": "Ребенок 6",
+                "kind_7": "Ребенок 7",
+                "kind_8": "Ребенок 8",
+                "kind_9": "Ребенок 9"
+            },
+            "subtitle": "Данные не верны? Если да, свяжитесь с муниципалитетом.",
+            "title": "Нижеприведенные данные уже заполнены"
         }
     },
     "fund_requests": {
