--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -618,14 +618,14 @@
                 "make_a_choice": "Виберіть один"
             },
             "fund_request_step_done": {
-                "application_processing": "Ваша заявка отримана. Заявка буде розглянута протягом 10 робочих днів. Ви отримаєте повідомлення про це електронною поштою.",
                 "application_received": "Заявка отримана",
                 "back": "Назад",
                 "error_occurred": "Виникла помилка при подачі заявки.",
                 "leave_form": "Бланк заяви на відпустку",
                 "reason": "Причина:",
                 "sent": "Відправлено!",
-                "sign_up": "Зареєструватися"
+                "sign_up": "Зареєструватися",
+                "application_processing": "Ваша заявка отримана. Заявка буде розглянута протягом максимум 8 тижнів. Ви отримаєте повідомлення про це електронною поштою."
             },
             "fund_request_physical_card_request": {
                 "description": "Ми надішлемо вашу фізичну картку на вказану вами адресу, як тільки вона буде готова до використання.",
@@ -699,8 +699,20 @@
             "child": "Дитинко.",
             "children": "Діти",
             "partner": "Інформація про вашого партнера",
-            "subtitle": "Якщо ваша інформація невірна, ви можете натиснути кнопку внизу.",
-            "title": "Перевірте правильність даних."
+            "children_list": {
+                "kind_1": "Дитина 1",
+                "kind_10": "Дитина 10",
+                "kind_2": "Дитина 2.",
+                "kind_3": "Дитина 3.",
+                "kind_4": "Дитина 4.",
+                "kind_5": "Дитина 5",
+                "kind_6": "Дитина 6",
+                "kind_7": "Дитина 7",
+                "kind_8": "Дитина 8.",
+                "kind_9": "Дитина 9"
+            },
+            "subtitle": "Неправильно вказані дані? Якщо так, зверніться до муніципалітету.",
+            "title": "Нижче наведені дані вже заповнені"
         }
     },
     "fund_requests": {
